[gd_scene load_steps=4 format=3 uid="uid://cqosjylc7vcds"]

[ext_resource type="Script" path="res://assets/scripts/enemyScripts/wall_crawler.gd" id="1_qvkkw"]
[ext_resource type="Texture2D" uid="uid://kev4wgddcoba" path="res://icon.svg" id="1_xubkd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vb6bj"]

[node name="wallCrawler" type="CharacterBody2D"]
script = ExtResource("1_qvkkw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1875, 0.1875)
texture = ExtResource("1_xubkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vb6bj")

[node name="rayCasts" type="Node2D" parent="."]

[node name="rayDown" type="RayCast2D" parent="rayCasts"]
target_position = Vector2(0, 12)

[node name="rayUp" type="RayCast2D" parent="rayCasts"]
target_position = Vector2(0, -12)

[node name="rayLeft" type="RayCast2D" parent="rayCasts"]
target_position = Vector2(-12, 0)

[node name="rayRight" type="RayCast2D" parent="rayCasts"]
target_position = Vector2(12, 0)
